tests/NormalTests/paczka1/fuzzy1/30591681.err
Error in line 4: Rc76qpM S419 61,2
Error in line 9: Rc76qpM A895 99,9
Error in line 15: Rpx2Xkgf A348 14,5
Error in line 16: nQWD2bd9 A348 262,4
Error in line 24: A895 A348 42,0
Error in line 19: 2yqJE S419 39,0
Error in line 31: 2yqJE A895 65,3
